--- a/roles/ansible_service_broker/tasks/install.yml
+++ b/roles/ansible_service_broker/tasks/install.yml
@@ -406,6 +406,10 @@
         data: "{{ ansible_service_broker_registry_password }}"
   when: ansible_service_broker_registry_user != "" and ansible_service_broker_registry_password != ""
 
+- name: Pause to check servicecatalog API is available.
+  pause:
+    prompt: Check whether clusterservicebroker resource can be found (run oc get clusterservicebroker)
+
 - name: Create the Broker resource in the catalog
   oc_obj:
     name: ansible-service-broker
